force-app/main/default/objects/Marketing_Activity__c/Marketing_Activity__c.object-meta.xml
<CustomObject>
    <description>Holds all Marketing Activities.....</description>
    <label>Marketing Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>