force-app/main/default/objects/Marketing_Activity__c/fields/Accountable1__c.field-meta.xml
<CustomField>
    <fullName>Accountable1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountable</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Activities5</relationshipName>
    <type>Lookup</type>
</CustomField>