force-app/main/default/objects/Marketing_Activity__c/fields/Accountable__c.field-meta.xml
<CustomField>
    <fullName>Accountable__c</fullName>
    <label>Accountable1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>