force-app/main/default/objects/Marketing_Activity__c/fields/Activity_Cost__c.field-meta.xml
<CustomField>
    <fullName>Activity_Cost__c</fullName>
    <inlineHelpText>The actual cost of the marketing activity</inlineHelpText>
    <label>Marketing Activity Cost</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>