force-app/main/default/objects/Marketing_Activity__c/fields/Activity_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Display_Name__c</fullName>
    <formula>Marketing_Campaign__r.Name  &amp; &quot;-&quot; &amp; TEXT(Channel__c) &amp; &quot;-&quot; &amp;IF( Marketing_Campaign__r.RecordType.DeveloperName = &quot;TBVSC_Brand_Campaign&quot; , &quot;GRP&quot; , Marketing_Campaign__r.Village__r.Village_Code__c ) &amp; &quot;-&quot; &amp; TEXT(YEAR(Start_Date__c)) &amp; CASE(MONTH(Start_Date__c), 1, &quot;JAN&quot;, 2, &quot;FEB&quot;, 3,&quot;MAR&quot;, 4,&quot;APR&quot;, 5, &quot;MAY&quot;, 6, &quot;JUN&quot;, 7, &quot;JUL&quot;, 8, &quot;AUG&quot;, 9, &quot;SEP&quot;, 10,&quot;OCT&quot;, 11, &quot;NOV&quot;, 12, &quot;DEC&quot;,&quot;00&quot;) &amp; &quot;-&quot; &amp; Marketing_Activity_Ref__c</formula>
    <label>Activity Display Name</label>
    <type>Text</type>
</CustomField>