force-app/main/default/objects/Marketing_Activity__c/fields/Activity_History__c.field-meta.xml
<CustomField>
    <fullName>Activity_History__c</fullName>
    <label>Activity History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>