force-app/main/default/objects/Marketing_Activity__c/fields/Activity_Notes__c.field-meta.xml
<CustomField>
    <fullName>Activity_Notes__c</fullName>
    <description>.</description>
    <inlineHelpText>Additional Marketing Activity Notes</inlineHelpText>
    <label>Activity Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>