force-app/main/default/objects/Marketing_Activity__c/fields/Activity_Split_Budget_Summary__c.field-meta.xml
<CustomField>
    <fullName>Activity_Split_Budget_Summary__c</fullName>
    <inlineHelpText>Sum of all the Associated &quot;Activity Budget Split&quot; records Total Budget field.</inlineHelpText>
    <label>Activity Split Budget Summary</label>
    <summarizedField>Activity_Budget_Split__c.Total_Budget__c</summarizedField>
    <summaryForeignKey>Activity_Budget_Split__c.Marketing_Activity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>