force-app/main/default/objects/Marketing_Activity__c/fields/Actual_spend__c.field-meta.xml
<CustomField>
    <fullName>Actual_spend__c</fullName>
    <description>field replaced by activity spend - keep until October then delete</description>
    <label>Actual spend</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>