force-app/main/default/objects/Marketing_Activity__c/fields/Asset_Link__c.field-meta.xml
<CustomField>
    <fullName>Asset_Link__c</fullName>
    <description>A link to where the asset is stored (sharepoint link etc...)</description>
    <inlineHelpText>A link to where the asset is stored (sharepoint link etc...)</inlineHelpText>
    <label>Asset Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>