force-app/main/default/objects/Marketing_Activity__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <inlineHelpText>e.g. All_Customer_Female</inlineHelpText>
    <label>Audience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>