force-app/main/default/objects/Marketing_Activity__c/fields/Audience_Category__c.field-meta.xml
<CustomField>
    <fullName>Audience_Category__c</fullName>
    <description>Audience Category</description>
    <label>Audience Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic Local</fullName>
            </value>
            <value>
                <fullName>Non-Domestic - Tourist</fullName>
            </value>
            <value>
                <fullName>Domestic Expat Student</fullName>
            </value>
            <value>
                <fullName>Domestic Expat Other</fullName>
            </value>
            <value>
                <fullName>Domestic - Tourist</fullName>
            </value>
            <value>
                <fullName>Tourist - Not Specified</fullName>
            </value>
            <value>
                <fullName>Domestic - Virtual Shopping</fullName>
            </value>
            <value>
                <fullName>Non-Domestic - Virtual Shopping</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>B2B</fullName>
                <isActive>false</isActive>
                <label>B2B</label>
            </value>
            <value>
                <fullName>B2C Brand Database</fullName>
                <isActive>false</isActive>
                <label>B2C Brand Database</label>
            </value>
            <value>
                <fullName>B2C Database</fullName>
                <isActive>false</isActive>
                <label>B2C Database</label>
            </value>
            <value>
                <fullName>B2C Partner Database</fullName>
                <isActive>false</isActive>
                <label>B2C Partner Database</label>
            </value>
            <value>
                <fullName>B2C Partner Database]</fullName>
                <isActive>false</isActive>
                <label>B2C Partner Database]</label>
            </value>
            <value>
                <fullName>B2C VR Database</fullName>
                <isActive>false</isActive>
                <label>B2C VR Database</label>
            </value>
            <value>
                <fullName>Domestic</fullName>
                <isActive>false</isActive>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>Expats</fullName>
                <isActive>false</isActive>
                <label>Expats</label>
            </value>
            <value>
                <fullName>Tourism Nationals</fullName>
                <isActive>false</isActive>
                <label>Tourism Nationals</label>
            </value>
            <value>
                <fullName>Tourism Nationals]</fullName>
                <isActive>false</isActive>
                <label>Tourism Nationals]</label>
            </value>
            <value>
                <fullName>Tourist-EU</fullName>
                <isActive>false</isActive>
                <label>Tourist-EU</label>
            </value>
            <value>
                <fullName>Tourist-NonEU</fullName>
                <isActive>false</isActive>
                <label>Tourist-NonEU</label>
            </value>
            <value>
                <fullName>Tourist-NonEU]</fullName>
                <isActive>false</isActive>
                <label>Tourist-NonEU]</label>
            </value>
            <value>
                <fullName>VIP Database</fullName>
                <isActive>false</isActive>
                <label>VIP Database</label>
            </value>
            <value>
                <fullName>VIP Database]</fullName>
                <isActive>false</isActive>
                <label>VIP Database]</label>
            </value>
            <value>
                <fullName>[B2B]</fullName>
                <isActive>false</isActive>
                <label>[B2B]</label>
            </value>
            <value>
                <fullName>[Domestic</fullName>
                <isActive>false</isActive>
                <label>[Domestic</label>
            </value>
            <value>
                <fullName>[Tourist-NonEU</fullName>
                <isActive>false</isActive>
                <label>[Tourist-NonEU</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>