force-app/main/default/objects/Marketing_Activity__c/fields/Audience_Village_local__c.field-meta.xml
<CustomField>
    <fullName>Audience_Village_local__c</fullName>
    <label>Audience (Village local)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>