force-app/main/default/objects/Marketing_Activity__c/fields/Barcode__c.field-meta.xml
<CustomField>
    <fullName>Barcode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Display a customer code on the email? e.g a QR or DM code</inlineHelpText>
    <label>Barcode</label>
    <type>Checkbox</type>
</CustomField>