force-app/main/default/objects/Marketing_Activity__c/fields/BAU_Boost__c.field-meta.xml
<CustomField>
    <fullName>BAU_Boost__c</fullName>
    <label>BAU/Boost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAU</fullName>
            </value>
            <value>
                <fullName>Boost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>