force-app/main/default/objects/Marketing_Activity__c/fields/Behaviour_Segment__c.field-meta.xml
<CustomField>
    <fullName>Behaviour_Segment__c</fullName>
    <label>Behaviour Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. New</fullName>
            </value>
            <value>
                <fullName>2. Active</fullName>
            </value>
            <value>
                <fullName>3. Lapsing</fullName>
            </value>
            <value>
                <fullName>4. Passive</fullName>
            </value>
            <value>
                <fullName>5. Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>