force-app/main/default/objects/Marketing_Activity__c/fields/Brand_Product_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Brand_Product_Opportunity__c</fullName>
    <inlineHelpText>e.g. 8</inlineHelpText>
    <label>Brand Product Opportunity</label>
    <length>55</length>
    <type>Text</type>
</CustomField>