force-app/main/default/objects/Marketing_Activity__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <inlineHelpText>The budget for the Marketing Activity</inlineHelpText>
    <label>Marketing Activity Budget</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>