force-app/main/default/objects/Marketing_Activity__c/fields/Business_Function__c.field-meta.xml
<CustomField>
    <fullName>Business_Function__c</fullName>
    <description>The business area that this activity is aligned with.....</description>
    <inlineHelpText>The business area that this activity is aligned with</inlineHelpText>
    <label>Business Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Functions</valueSetName>
    </valueSet>
</CustomField>