force-app/main/default/objects/Marketing_Activity__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Village online</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>In Village</fullName>
            </value>
            <value>
                <fullName>Shuttles</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Travel Trade</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>