force-app/main/default/objects/Marketing_Activity__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <inlineHelpText>Marketing Channel</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Campaign Support</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Non-campaign</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Village Services</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Visual Merchandising</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>