force-app/main/default/objects/Marketing_Activity__c/fields/Check_Date_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Check_Date_Marketing_Campaign__c</fullName>
    <description>This field is used on Marketing Activity Report</description>
    <formula>IF(OR(End_Date__c &gt; ADDMONTHS( Marketing_Campaign__r.End_Date__c ,+6),Start_Date__c &lt; ADDMONTHS( Marketing_Campaign__r.Start_Date__c ,-6) ), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Date Marketing Campaign</label>
    <type>Checkbox</type>
</CustomField>