force-app/main/default/objects/Marketing_Activity__c/fields/Communication_Plan__c.field-meta.xml
<CustomField>
    <fullName>Communication_Plan__c</fullName>
    <inlineHelpText>e.g. posts &amp; banner - Max Length 2000 chars</inlineHelpText>
    <label>Communication Plan</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>