force-app/main/default/objects/Marketing_Activity__c/fields/Consulted__c.field-meta.xml
<CustomField>
    <fullName>Consulted__c</fullName>
    <inlineHelpText>Enter the names of the people who were consulted on this Activity</inlineHelpText>
    <label>Consulted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>