force-app/main/default/objects/Marketing_Activity__c/fields/Continue_with_Date_error__c.field-meta.xml
<CustomField>
    <fullName>Continue_with_Date_error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continue with Date error?</label>
    <type>Checkbox</type>
</CustomField>