force-app/main/default/objects/Marketing_Activity__c/fields/Creative_Agency_4__c.field-meta.xml
<CustomField>
    <fullName>Creative_Agency_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Agency 4</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>equals</operation>
            <value>Third Party Community User</value>
        </filterItems>
        <infoMessage>Please choose a Customer Portal User</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Activities4</relationshipName>
    <type>Lookup</type>
</CustomField>