force-app/main/default/objects/Marketing_Activity__c/fields/Creative_Agency_Access_To_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Creative_Agency_Access_To_Salesforce__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Agency 1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please choose a Customer Portal User</errorMessage>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>equals</operation>
            <value>Third Party Community User</value>
        </filterItems>
        <infoMessage>Please choose a Customer Portal User</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>