force-app/main/default/objects/Marketing_Activity__c/fields/Customer_Dimension__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dimension__c</fullName>
    <inlineHelpText>Sub segmentation category</inlineHelpText>
    <label>Customer Dimension</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>