force-app/main/default/objects/Marketing_Activity__c/fields/Date_Assets_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Assets_Sent__c</fullName>
    <inlineHelpText>This is for VR to fill in for when they have sent over the media content via email or FTP</inlineHelpText>
    <label>Date Assets Sent</label>
    <type>Date</type>
</CustomField>