force-app/main/default/objects/Marketing_Activity__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp;  Marketing_Campaign__r.Village__r.Village_Code__c</formula>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>