force-app/main/default/objects/Marketing_Activity__c/fields/Domestic__c.field-meta.xml
<CustomField>
    <fullName>Domestic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Domestic</label>
    <type>Checkbox</type>
</CustomField>