force-app/main/default/objects/Marketing_Activity__c/fields/Email_Type__c.field-meta.xml
<CustomField>
    <fullName>Email_Type__c</fullName>
    <label>Email Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Offer- Long Template</fullName>
            </value>
            <value>
                <fullName>Offer - Short Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>