force-app/main/default/objects/Marketing_Activity__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Enter a End date where you expect the activity to stop impacting footfall/Sales in the Village.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>