force-app/main/default/objects/Marketing_Activity__c/fields/Expected_New_Members__c.field-meta.xml
<CustomField>
    <fullName>Expected_New_Members__c</fullName>
    <inlineHelpText>The expected new members which will be recruited as a result of this activity</inlineHelpText>
    <label>Expected New Members</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>