force-app/main/default/objects/Marketing_Activity__c/fields/Expected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Expected_Sales__c</fullName>
    <inlineHelpText>The expected sales which will be generated as a result of this activity</inlineHelpText>
    <label>Expected Sales</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>