force-app/main/default/objects/Marketing_Activity__c/fields/Expenditure_Category__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Category__c</fullName>
    <formula>&apos;MKT&apos;+&apos;-&apos;+TEXT(Channel__c)</formula>
    <label>Expenditure Category</label>
    <type>Text</type>
</CustomField>