force-app/main/default/objects/Marketing_Activity__c/fields/Expenditure_Type__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Type__c</fullName>
    <formula>&apos;MKT&apos;+&apos;-&apos;+TEXT(Sub_Channel__c)</formula>
    <label>Expenditure Type</label>
    <type>Text</type>
</CustomField>