force-app/main/default/objects/Marketing_Activity__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>