force-app/main/default/objects/Marketing_Activity__c/fields/Global_Partner_Level__c.field-meta.xml
<CustomField>
    <fullName>Global_Partner_Level__c</fullName>
    <description>Tier level of the partner if they are a Global Partner</description>
    <formula>TEXT(Partner__r.Global_Partner__c)</formula>
    <inlineHelpText>Tier level of the partner if they are a Global Partner</inlineHelpText>
    <label>Global Partner Level</label>
    <type>Text</type>
</CustomField>