force-app/main/default/objects/Marketing_Activity__c/fields/GRNIs_Cost__c.field-meta.xml
<CustomField>
    <fullName>GRNIs_Cost__c</fullName>
    <label>GRNIs Cost</label>
    <summarizedField>Cost__c.Cost_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Cost__c.Cost_Type__c</field>
        <operation>equals</operation>
        <value>GRNI</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost__c.Marketing_Activity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>