force-app/main/default/objects/Marketing_Activity__c/fields/Group_or_Village_Activity__c.field-meta.xml
<CustomField>
    <fullName>Group_or_Village_Activity__c</fullName>
    <formula>IF(Marketing_Campaign__r.RecordType.Name = &quot;Village Campaign&quot;, &quot;Village Activity&quot;, &quot;TBVSC Brand Activity&quot;)</formula>
    <label>TBVSC Brand or Village Activity</label>
    <type>Text</type>
</CustomField>