force-app/main/default/objects/Marketing_Activity__c/fields/Group_or_Village_Activity_for_filter__c.field-meta.xml
<CustomField>
    <fullName>Group_or_Village_Activity_for_filter__c</fullName>
    <label>TBVSC Brand or Village Activity filter</label>
    <length>25</length>
    <type>Text</type>
</CustomField>