force-app/main/default/objects/Marketing_Activity__c/fields/Help_With_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Help_With_Segmentation__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01567000009QkCI&quot;, &quot;Download Segmentation Help Document&quot; )</formula>
    <label>Help With Audience and Segmentation</label>
    <type>Text</type>
</CustomField>