force-app/main/default/objects/Marketing_Activity__c/fields/Help_with_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Help_with_Tiers__c</fullName>
    <formula>HYPERLINK(&quot;/servlet/servlet.FileDownload?file=015b0000005o9GV&quot;, &quot;View Tier Help Document&quot; )</formula>
    <label>Help with Tiers</label>
    <type>Text</type>
</CustomField>