force-app/main/default/objects/Marketing_Activity__c/fields/Hero_message__c.field-meta.xml
<CustomField>
    <fullName>Hero_message__c</fullName>
    <inlineHelpText>e.g. Final Reductions</inlineHelpText>
    <label>Hero message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>