force-app/main/default/objects/Marketing_Activity__c/fields/HFS_Entitled__c.field-meta.xml
<CustomField>
    <fullName>HFS_Entitled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HFS Entitled</label>
    <type>Checkbox</type>
</CustomField>