force-app/main/default/objects/Marketing_Activity__c/fields/Influencers__c.field-meta.xml
<CustomField>
    <fullName>Influencers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Influencers</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Marketing Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Activities (Influencers)</relationshipLabel>
    <relationshipName>Marketing_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>