force-app/main/default/objects/Marketing_Activity__c/fields/Informed__c.field-meta.xml
<CustomField>
    <fullName>Informed__c</fullName>
    <inlineHelpText>Enter the Names of the people that need to be kept informed about this Activity</inlineHelpText>
    <label>Informed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>