force-app/main/default/objects/Marketing_Activity__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <description>Represents the status of the record as far as the Oracle Integration is concerned.</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>waiting</fullName>
                <label>Waiting</label>
            </value>
            <value>
                <fullName>sending</fullName>
                <label>Sending</label>
            </value>
            <value>
                <fullName>confirmed</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>error</fullName>
                <label>Error</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>