force-app/main/default/objects/Marketing_Activity__c/fields/Is_EU__c.field-meta.xml
<CustomField>
    <fullName>Is_EU__c</fullName>
    <formula>TEXT(Region__c) = &apos;Europe&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EU</label>
    <type>Checkbox</type>
</CustomField>