force-app/main/default/objects/Marketing_Activity__c/fields/Is_Live__c.field-meta.xml
<CustomField>
    <fullName>Is_Live__c</fullName>
    <formula>IF(AND(Start_Date__c &lt;= TODAY(),End_Date__c &gt;= TODAY()), True, False)</formula>
    <label>Is Live</label>
    <type>Checkbox</type>
</CustomField>