force-app/main/default/objects/Marketing_Activity__c/fields/Is_logged_in_User_assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_logged_in_User_assigned__c</fullName>
    <formula>OR(
IF(AND( CONTAINS(X3rd_Party_Assigned__c,$User.Email), Creative_Agency_Access_To_Salesforce__r.Profile.Name = &quot;Third Party Community User&quot;), true, false),
IF(AND( CONTAINS(X3rd_Party_Assigned__c,$User.Email), Creative_Agency_2__r.Profile.Name = &quot;Third Party Community User&quot;), true, false),
IF(AND( CONTAINS(X3rd_Party_Assigned__c,$User.Email), Creative_Agency_3__r.Profile.Name = &quot;Third Party Community User&quot;), true, false),
IF(AND( CONTAINS(X3rd_Party_Assigned__c,$User.Email), Creative_Agency_4__r.Profile.Name = &quot;Third Party Community User&quot;), true, false),
false)</formula>
    <label>Is logged in User assigned</label>
    <type>Checkbox</type>
</CustomField>